[gd_scene load_steps=24 format=3 uid="uid://dkbjvbbtsp874"]

[ext_resource type="Texture2D" uid="uid://d4m3i4skhymtw" path="res://Images/Projectiles/StarProjectile.png" id="1_760k8"]
[ext_resource type="Script" path="res://Scripts/ShopScripts/shop.gd" id="1_b3vn2"]
[ext_resource type="Script" path="res://Scripts/ShopScripts/toggle_shop.gd" id="1_g26t6"]
[ext_resource type="Texture2D" uid="uid://caunl7uwssx72" path="res://Images/gabbieaart/shop/shopbackground.png" id="3_f0xrp"]
[ext_resource type="Texture2D" uid="uid://dj3eyqo4pax3g" path="res://Images/TestSprites/Heart/FullHeart.png" id="3_r8no5"]
[ext_resource type="Texture2D" uid="uid://x1c4lco03xt1" path="res://Images/gabbieaart/shop/shopdescription.png" id="4_xh33d"]
[ext_resource type="Script" path="res://Scripts/ShopScripts/first_box_area.gd" id="5_al6dg"]
[ext_resource type="Script" path="res://Scripts/ShopScripts/second_box_area.gd" id="6_pt6v5"]
[ext_resource type="Script" path="res://Scripts/ShopScripts/third_box_area.gd" id="7_ccmb5"]
[ext_resource type="Script" path="res://Scripts/ShopScripts/buy_box_area.gd" id="7_eugr8"]
[ext_resource type="Texture2D" uid="uid://dwn1wsccnn4fs" path="res://Images/Random/SingleCoin.png" id="8_08g7k"]
[ext_resource type="Script" path="res://Scripts/display_health.gd" id="9_b1n12"]
[ext_resource type="Texture2D" uid="uid://diwlkx6ibymda" path="res://Images/gabbieaart/shop/shopbutton.png" id="10_2tw5l"]
[ext_resource type="Script" path="res://Scripts/back_area.gd" id="10_tt12u"]
[ext_resource type="Texture2D" uid="uid://l11lodslea1y" path="res://Images/TestSprites/Shield/shield.png" id="11_8wp0q"]
[ext_resource type="AudioStream" uid="uid://d18rj7lj0csjn" path="res://audio/shop/itemboughtsound.wav" id="12_4lpv6"]
[ext_resource type="AudioStream" uid="uid://5v4vky2mv7h1" path="res://audio/shop/itemclicked.wav" id="12_isux2"]
[ext_resource type="AudioStream" uid="uid://c1yt5ooci4c47" path="res://audio/female-hurt-2-94301.mp3" id="12_wbqn2"]
[ext_resource type="Script" path="res://Scripts/display_coins.gd" id="13_l7kup"]
[ext_resource type="AudioStream" uid="uid://nks3iie1cft6" path="res://audio/coin-drop-1-104046.mp3" id="15_jyo7v"]

[sub_resource type="SystemFont" id="SystemFont_de26t"]
font_names = PackedStringArray("Fantasy")
hinting = 2
oversampling = 10.0

[sub_resource type="SystemFont" id="SystemFont_7h746"]
font_names = PackedStringArray("Fantasy")

[sub_resource type="SystemFont" id="SystemFont_thnkc"]
font_names = PackedStringArray("Fantasy")

[node name="Shop" type="Node2D"]
script = ExtResource("1_g26t6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_b3vn2")

[node name="ShopBackground" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(579.25, 325.25)
scale = Vector2(1.66356, 1.56235)
texture = ExtResource("3_f0xrp")

[node name="DescriptionBox" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(558, 414.935)
rotation = 0.00872665
scale = Vector2(2, 2)
texture = ExtResource("4_xh33d")

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/DescriptionBox"]
visible = false
offset_left = -279.757
offset_top = -85.4944
offset_right = 301.243
offset_bottom = -41.9944
rotation = -0.00872665
theme_override_font_sizes/font_size = 10
text = "This will be the description that will be updated for each item."

[node name="Label" type="Label" parent="CanvasLayer/DescriptionBox"]
offset_left = -133.0
offset_top = -152.0
offset_right = 125.0
offset_bottom = -110.0
rotation = -0.00872665
theme_override_fonts/font = SubResource("SystemFont_de26t")
theme_override_font_sizes/font_size = 21
text = "Click or hover over an item to view its description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 1164.0
offset_bottom = 656.0
color = Color(0.268657, 0.150599, 0.248878, 1)

[node name="ItemBoxBackground" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_top = 328.585
offset_right = 1164.0
offset_bottom = 653.8
color = Color(0.317833, 0.129864, 0.147583, 1)

[node name="FirstBoxSelect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 81.0
offset_top = 340.0
offset_right = 296.0
offset_bottom = 555.0
color = Color(0, 0, 0, 1)

[node name="FirstItem" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(180, 445.355)
scale = Vector2(17.3125, 16.1563)
texture = ExtResource("1_760k8")

[node name="SecondBoxSelect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 474.0
offset_top = 340.0
offset_right = 689.0
offset_bottom = 555.0
color = Color(0, 0, 0, 1)

[node name="SecondItem" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(572.99, 445.355)
scale = Vector2(17.313, 16.156)
texture = ExtResource("1_760k8")

[node name="ThirdBoxSelect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_left = 869.0
offset_top = 340.0
offset_right = 1084.0
offset_bottom = 555.0
color = Color(0, 0, 0, 1)

[node name="ThirdItem" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(969.15, 443.355)
scale = Vector2(17.313, 16.156)
texture = ExtResource("1_760k8")

[node name="FirstBoxArea" type="TextureRect" parent="CanvasLayer"]
offset_left = 89.0
offset_top = 352.0
offset_right = 284.0
offset_bottom = 547.0
script = ExtResource("5_al6dg")

[node name="SecondBoxArea" type="TextureRect" parent="CanvasLayer"]
offset_left = 483.0
offset_top = 351.0
offset_right = 678.0
offset_bottom = 546.0
script = ExtResource("6_pt6v5")

[node name="ThirdBoxArea" type="TextureRect" parent="CanvasLayer"]
offset_left = 879.0
offset_top = 352.0
offset_right = 1074.0
offset_bottom = 547.0
script = ExtResource("7_ccmb5")

[node name="BuyBox" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(600, 601)
scale = Vector2(2, 2)
texture = ExtResource("10_2tw5l")

[node name="Label" type="Label" parent="CanvasLayer/BuyBox"]
offset_left = -62.0
offset_top = -13.0
offset_right = 64.0
offset_bottom = 20.0
scale = Vector2(0.995012, 1)
theme_override_fonts/font = SubResource("SystemFont_7h746")
theme_override_font_sizes/font_size = 27
text = "Buy 99 coins"
horizontal_alignment = 1

[node name="BuyBoxArea" type="TextureRect" parent="CanvasLayer/BuyBox"]
offset_left = -63.0
offset_top = -13.0
offset_right = -40.0
offset_bottom = 10.0
scale = Vector2(5.567, 1.203)
script = ExtResource("7_eugr8")

[node name="BackBox" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(87, 607.25)
scale = Vector2(1, 1.90816)
texture = ExtResource("10_2tw5l")

[node name="Label" type="Label" parent="CanvasLayer/BackBox"]
offset_left = -65.0
offset_top = -14.0
offset_right = 65.0
offset_bottom = 16.0
theme_override_fonts/font = SubResource("SystemFont_thnkc")
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackArea" type="TextureRect" parent="CanvasLayer/BackBox"]
offset_left = -61.0
offset_top = -11.0
offset_right = 64.0
offset_bottom = 15.0
script = ExtResource("10_tt12u")

[node name="ItemClickedAudio" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("12_isux2")

[node name="ItemBoughtAudio" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("12_4lpv6")

[node name="Health" type="CanvasLayer" parent="."]
script = ExtResource("9_b1n12")

[node name="FirstHeart" type="Sprite2D" parent="Health"]
position = Vector2(64, 60)
scale = Vector2(4, 4)
texture = ExtResource("3_r8no5")

[node name="SecondHeart" type="Sprite2D" parent="Health"]
position = Vector2(145, 60)
scale = Vector2(4, 4)
texture = ExtResource("3_r8no5")

[node name="ThirdHeart" type="Sprite2D" parent="Health"]
position = Vector2(226, 60)
scale = Vector2(4, 4)
texture = ExtResource("3_r8no5")

[node name="FourthHeart" type="Sprite2D" parent="Health"]
position = Vector2(307, 60)
scale = Vector2(4, 4)
texture = ExtResource("3_r8no5")

[node name="FifthHeart" type="Sprite2D" parent="Health"]
position = Vector2(388, 60)
scale = Vector2(4, 4)
texture = ExtResource("3_r8no5")

[node name="FirstShield" type="Sprite2D" parent="Health"]
position = Vector2(45, 107)
scale = Vector2(4, 4)
texture = ExtResource("11_8wp0q")

[node name="SecondShield" type="Sprite2D" parent="Health"]
position = Vector2(86, 107)
scale = Vector2(4, 4)
texture = ExtResource("11_8wp0q")

[node name="ThirdShield" type="Sprite2D" parent="Health"]
position = Vector2(127, 107)
scale = Vector2(4, 4)
texture = ExtResource("11_8wp0q")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="Health"]
stream = ExtResource("12_wbqn2")
volume_db = 2.476

[node name="CoinDisplay" type="CanvasLayer" parent="."]
script = ExtResource("13_l7kup")

[node name="Sprite2D" type="Sprite2D" parent="CoinDisplay"]
position = Vector2(1020, 45)
scale = Vector2(4, 4)
texture = ExtResource("8_08g7k")

[node name="CoinLabel" type="Label" parent="CoinDisplay"]
offset_left = 1059.0
offset_top = 4.0
offset_right = 1145.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 50
text = "100"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CoinDisplay"]
stream = ExtResource("15_jyo7v")
volume_db = 0.99

[connection signal="mouse_entered" from="CanvasLayer/FirstBoxArea" to="CanvasLayer/FirstBoxArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/FirstBoxArea" to="CanvasLayer/FirstBoxArea" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/SecondBoxArea" to="CanvasLayer/SecondBoxArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/SecondBoxArea" to="CanvasLayer/SecondBoxArea" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/ThirdBoxArea" to="CanvasLayer/ThirdBoxArea" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ThirdBoxArea" to="CanvasLayer/ThirdBoxArea" method="_on_mouse_exited"]
